fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4113,13 +4113,7 @@ placessidebar {
       margin: 0;
       border-radius: 0; }
       placessidebar row.sidebar-row.sidebar-row label {
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
-        color: #98abb2; }
+        padding-left: 30px; }
     placessidebar row.sidebar-row:hover {
       background: rgba(0, 0, 0, 0.12);
       color: inherit; }
